--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ img {
 <div class="container hidden" id="secretBox">
   <h1>You unlocked my heart 💖</h1>
   <p>This is our secret place 🌸</p>
-  <img src="puuung-puuung-hug.gif">
+  <img src="puu">
 </div>
 
 <script>
