--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   background: linear-gradient(135deg, #ff758c, #ff7eb3);
-  color: white;
+  color: black;
   overflow: hidden;
 }
 
