--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ function showRandomText() {
   text.style.top = Math.random() * window.innerHeight + "px";
   text.style.fontSize = "20px";
   text.style.fontWeight = "bold";
-  text.style.color = "white";
+  text.style.color = "black";
   text.style.animation = "fadeOut 4s forwards";
 
   document.body.appendChild(text);
